[workspace]
members = [ "flappy_mutalisk_base", "my_library" ]

[package]
name = "flappy_mutalisk_base"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }
bevy_egui = "0.39.1"
my_library = { path = "my_library" }
rand_pcg = "0.3"
rand_xorshift = "0.3.0"